--- a/style/Escritorio.css
+++ b/style/Escritorio.css
@@ -32,6 +32,25 @@ body{
     cursor: pointer;
 }
 
+#notas-bg {
+    padding: 18px;
+    padding-bottom: 0px;
+    width: 180px;
+}
+
+#notas {
+    padding: 15px;
+    background-color: transparent;
+    transition: all 0.2s ease-in-out;
+}
+
+#notas:hover {
+    background-color: rgba(161, 161, 161, 0.438);
+    padding: 15px;
+    border: 1px solid #aaa;
+    cursor: pointer;
+}
+
 #arcade-bg {
     padding: 18px;
     width: 180px;
