--- a/style/Escritorio.css
+++ b/style/Escritorio.css
@@ -85,90 +85,90 @@ body{
 }
 
 @media screen and (max-width: 1370px) {
-    .papelera{
+    #papelera{
         width: 120px;
     }
-    .arcade{
+    #arcade{
         width: 120px;
     }
-    .notas{
+    #notas{
         width: 120px;
     }
-    .excel{
+    #excel{
         width: 120px;
     }
 }
 
 @media screen and (max-width: 1220px) {
-    .papelera{
+    #papelera{
         width: 110px;
     }
-    .arcade{
+    #arcade{
         width: 110px;
     }
-    .notas{
+    #notas{
         width: 110px;
     }
-    .excel{
+    #excel{
         width: 110px;
     }
 }
 
 @media screen and (max-width: 1020px) {
-    .papelera{
+    #papelera{
         width: 100px;
     }
-    .arcade{
+    #arcade{
         width: 100px;
     }
-    .notas{
+    #notas{
         width: 100px;
     }
-    .excel{
+    #excel{
         width: 100px;
     }
 }
 
 @media screen and (max-width: 820px) {
-    .papelera{
+    #papelera{
         width: 90px;
     }
-    .arcade{
+    #arcade{
         width: 90px;
     }
-    .notas{
+    #notas{
         width: 90px;
     }
-    .excel{
+    #excel{
         width: 90px;
     }
 }
 
 @media screen and (max-width: 620px) {
-    .papelera{
+    #papelera{
         width: 80px;
     }
-    .arcade{
+    #arcade{
         width: 80px;
     }
-    .notas{
+    #notas{
         width: 80px;
     }
-    .excel{
+    #excel{
         width: 80px;
     }
 }
 @media screen and (max-width: 420px) {
-    .papelera{
+    #papelera{
         width: 70px;
     }
-    .arcade{
+    #arcade{
         width: 70px;
     }
-    .notas{
+    #notas{
         width: 70px;
     }
-    .excel{
+    #excel{
         width: 70px;
     }
 }
